--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
